--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <p class="demo"> some content</p>
+   <!-- <p class="demo"> some content</p>
     <p class="demo"> some content</p>
     <p class="demo"> some content</p>
     <div class="box-one"></div>
     <div class="box-two"></div>
     <div class="box-three"></div>
-    <div class="box-four "></div>
+    <div class="box-four "></div>-->
+<div class="col-3" style="height: 200px"></div>
+<div class="col-9" style="height: 200px"></div>
+<div class="col-12" style="height: 50px"></div>
+
 </body>
 </html>
